# PromptSmith

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
promptsmith/: __init__.py  canvas.py  cli.py  config.py  exceptions.py  formatter.py
promptsmith/styles/: __init__.py  base.py  builtins.py  registry.py
promptsmith/utils/: __init__.py  clipboard.py  logger.py
tests/: __init__.py  test_canvas.py  test_cli.py  test_formatter.py  test_registry.py
